--- a/khanatek/core/templates/core/home_page.html
+++ b/khanatek/core/templates/core/home_page.html
@@ -22,6 +22,7 @@
         		{% homepage_article_listing %}
     </section>
     
+    <hr class="between-sections">
 
     <section id="posts" class="container">
         <h2 class="section-heading wow fadeIn" data-wow-delay="0.8s">{{ self.project_title|safe }}</h2>
