--- a/khanatek/core/templates/core/tags/homepage_article_listing.html
+++ b/khanatek/core/templates/core/tags/homepage_article_listing.html
@@ -1,5 +1,5 @@
 {% if article_posts %}
-    <ul class="article-list">
+    <ul class="blog-list">
         {% for post in article_posts %}
            {% include "core/tags/article_list_item.html" with post=post %}
         {% endfor %}
