--- a/khanatek/core/templates/core/article_page.html
+++ b/khanatek/core/templates/core/article_page.html
@@ -21,7 +21,7 @@
                                
                                 <!--Featured image-->
                                 {% if image %}
-                                    {% image page.main_image fill-744.6x328.85 as background %}
+                                    <!-- {% image page.main_image fill-744.6x328.85 as background %} -->
                                     <div class="" style="background-image: url("{{ main_image.url }}");"></div>
                                 {% endif %}
 
