--- a/khanatek/core/templates/core/base.html
+++ b/khanatek/core/templates/core/base.html
@@ -47,6 +47,7 @@
     <!-- Khanatek Custom CSS -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/khanatek.css' %}">
+    <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/new.css' %}"> -->
 
     {% block extra_css %}{% endblock %}
 
