--- a/khanatek/core/templates/core/home_page.html
+++ b/khanatek/core/templates/core/home_page.html
@@ -6,7 +6,7 @@
 
     {% include "core/includes/hero.html" with hero=self.hero.all primary_title=self.hero_intro_primary secondary_title=self.hero_intro_secondary %}
 
-<div class="container">
+<div class="container-fluid">
     <section class="section feature-box" id="best-features">
         <div class="container">
             <div class="section-description lead wow fadeIn" data-wow-delay="0.2s">
@@ -17,14 +17,15 @@
 
     <hr class="between-sections">
 
-    <section id="posts" class="container">
+    <section class="section extra-margins text-center">
         <h2 class="section-heading wow fadeInDown" data-wow-delay="0.4s">{{ self.article_title|safe }}</h2>
         		{% homepage_article_listing %}
+
     </section>
     
     <hr class="between-sections">
 
-    <section id="posts" class="container">
+     <section class="section extra-margins text-center">
         <h2 class="section-heading wow fadeIn" data-wow-delay="0.8s">{{ self.project_title|safe }}</h2>
        
          		{% homepage_project_listing %}
