--- a/khanatek/core/templates/core/base.html
+++ b/khanatek/core/templates/core/base.html
@@ -43,6 +43,7 @@
 
     <!-- Material Design Bootstrap -->
     <link rel="stylesheet" href="{% static 'css/mdb.css' %}">
+    <link rel="stylesheet" href="{% static 'css/mdb.min.css' %}">
 
     <!-- Khanatek Custom CSS -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
