--- a/khanatek/core/templates/core/home_page.html
+++ b/khanatek/core/templates/core/home_page.html
@@ -6,7 +6,7 @@
 
     {% include "core/includes/hero.html" with hero=self.hero.all primary_title=self.hero_intro_primary secondary_title=self.hero_intro_secondary %}
 
-<div class="container-fluid">
+<div class="container">
     <section class="section feature-box" id="best-features">
         <div class="container">
             <div class="section-description lead wow fadeIn" data-wow-delay="0.2s">
