project pages added

--- a/khanatek/core/templates/core/includes/project_item.html
+++ b/khanatek/core/templates/core/includes/project_item.html
@@ -1,29 +1,61 @@
-{% load wagtailcore_tags wagtailimages_tags static %}
+{% load wagtailcore_tags wagtailimages_tags %}
+<div class="col-md-6 mb-r wow zoomIn" data-wow-delay="0.4s">
+    <a href="{% pageurl page %}">
+        <div class="content">
+            {% if image %}
+                {% image image fill-500x500 as background %}
+                <div class="image-container" style="background-image: url('{{ background.url }}');"></div>
+            {% endif %}
 
-<li>
-    <div class="row">
-    
-        <div class="col-md-6 mb-r wow fadeInLeft" data-wow-delay="0.9s">
-            <!--Featured image-->
-            <a href="{% pageurl page %}">
-            <div class="view overlay hm-white-slight z-depth-2">
-                {% if image %}
-                    {% image image fill-540x360 as background %}
-                    <div class="image-container" style="background-image: url('{{ background.url }}');" ></div>
-                    <a>
-                        <div class="mask"></div>
-                    </a>
-                {% endif %}
-            </div>
-            </a>
-
-            <!--Excerpt-->
-            <div class="card-block">
-                        <h5 class="red-text"><i class="fa fa-hat"></i>Project</h5>
-                        <h3>{{ title }}</h3>
-                    <p class="post-into">{{ project.intro|richtext|truncatewords_html:11 }}</p>
-                <a class="btn btn-git" href="{% pageurl page %}"><i class="fa fa-clone left"></i> View project</a>
+            <div class="work-text">
+                <label>Work</label>
+                <h3>{{ descriptive_title }}</h3>
+                <h4>{{ title }}</h4>
             </div>
         </div>
+    </a>
+</div>
+
+ <!-- <div class="col-md-6 mb-r wow zoomIn" data-wow-delay="0.4s"> -->
+                        <!--Card-->
+<!--                         <div class="view hm-zoom" style="background-image: url('https://mdbootstrap.com/images/regular/dark/img%20(8).jpg')">
+ -->
+                            <!--Content-->
+<!--                             <div class="white-text text-center">
+                                <div class="card-block">
+                                    <h5 class="cyan-text"><i class="fa fa-desktop"></i> Software</h5>
+                                    <h3>Project title</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fugiat, laboriosam, voluptatem, optio vero odio nam sit officia accusamus minus error nisi architecto nulla ipsum dignissimos. Odit sed qui, dolorum!.</p>
+                                    <a class="btn btn-lg btn-outline-white"><i class="fa fa-clone left"></i> View project</a>
+                                </div> -->
+                            <!-- </div> -->
+
+                        <!-- </div> -->
+                        <!--/.Card-->
+                    <!-- </div> -->
+                    <!--/Third column-->
+
+<div class="col-md-6 mb-r wow zoomIn" data-wow-delay="0.4s">
+
+    <!--Collection card-->
+    <div class="card collection-card">
+        <!--Card image-->
+        <div class="view  hm-zoom">
+            {% if image %}
+                {% image image fill-500x500 as background %}
+            <img src="{{ background.url }}" class="img-fluid" alt="">
+            {% endif %}
+
+            <div class="white-text text-center">
+                <div class="stripe">
+                <h4>{{ descriptive_title }}</h4>
+                    <h3>{{ title }}</h3>
+                    <a class="btn btn-lg btn-outline-white" href="{% pageurl page %}"><i class="fa fa-clone left"></i> View project</a>
+                </div>
+            </div>
+        </div>
+        <!--/.Card image-->
     </div>
-</li>
+    <!--/.Collection card-->
+
+</div>
