--- a/khanatek/core/templates/core/project_page.html
+++ b/khanatek/core/templates/core/project_page.html
@@ -10,7 +10,7 @@
         {% if screenshots %}
                 {% for screenshot in screenshots %}
                     {% image screenshot.image width-9999 as shot %}
-                    <div class="work-hero" style=" background-image:url({{ shot.url }});">
+                    <div class="work-hero" style=" background-image:url({{ shot.url }}); margin-top: 300px;">
                         <div class="hero-text" id="tester-unique">
                             <div class="container">
                                 <div class="content">
@@ -33,7 +33,7 @@
                         {% if tags %}
                             {% for tag in tags %}
                                 <li>
-                                    <a href="{% pageurl self.work_index %}?tag={{ tag.tag.slug }}">{{ tag.tag }}</a>
+                                    <a href="{% pageurl self.project_index %}?tag={{ tag.tag.slug }}">{{ tag.tag }}</a>
                                 </li>
                             {% endfor %}
                         {% endif %}
@@ -45,34 +45,80 @@
                 {% if page.visit_the_site %}
                 <a class="visit" href="{{ page.visit_the_site }}">
                     Visit the site
-                    <span class="svg">
-                        <svg version="1.1"
-                                 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
-                                 x="0px" y="0px" viewBox="0 0 71 71" style="enable-background:new 0 0 71 71;" xml:space="preserve">
-                            <defs>
-                            </defs>
-                            <polyline points="70.5,55.5 70.5,70.5 0.5,70.5 0.5,0.5 15.5,0.5 "/>
-                            <polyline points="47.2,0.5 70.5,0.5 70.5,23.8 "/>
-                            <line  x1="70.5" y1="0.5" x2="35.5" y2="35.5"/>
-                        </svg>
-                    </span>
                 </a>
                 {% endif %}
             </div>
         </div>
-
     </div>
 
     <section class="text-content js-text-content" data-jq-clipthru="testclass-1" id="work-content">
 
         <div class="container">
             <div class="main-content  {% if not page.visit_the_site %}main-content--no-visit{% endif %}">
-                <div class="fixed">
-                    {% if self.body %}
-                            {{ self.body|richtext }}
-                    {% endif %}
+                <div class="fixed"> 
+                    {% for block in self.body %}
+                        {% if block.block_type == 'h2' %}
+                            <h2>{{ block }}</h2>
+                        {% elif block.block_type == 'h3' %}
+                            <h3>{{ block }}</h3>
+                        {% elif block.block_type == 'h4' %}
+                            <h4>{{ block }}</h4>
+                        {% elif block.block_type == 'intro' %}
+                            <div class="intro drop-cap">{{ block }}</div>
+                        {% elif block.block_type == 'pullquote' %}
+                            <blockquote class="pull-quote">
+                                <p>{{ block.value.quote }}</p>
+                                <cite> – {{ block.value.attribution }}</cite>
+                            </blockquote>
+                        {% elif block.block_type == 'testimonial' %}
+                            <blockquote class="pull-quote">
+                                <p>{{ block.value.quote }}</p>
+                                <cite> – {{ block.value.attribution }}</cite>
+                            </div>
+                        {% elif block.block_type == 'bustout' %}
+                            <div class="bustout clearfix">
+                                {% image block.value.image width-1280 as blockimage %}
+                                <img src="{{ blockimage.url }}" width="{{ blockimage.width }}" height="{{ blockimage.height }}" alt="{{ blockimage.alt }}" />
 
-                    {% include "torchbox/includes/streamfield.html" %}
+                                <div class="bustout-text">
+                                    {{ block.value.text|richtext }}
+                                </div>
+                            </div>
+                        {% elif block.block_type == 'aligned_image' %}
+                            <div class="{% if block.value.alignment == 'left' or block.value.alignment == 'right' %}align-{{ block.value.alignment }}{% else %}{{ block.value.alignment }}-width{% endif %}">
+                                <div class="img-holder">
+                                    {% if block.value.alignment == "left" or block.value.alignment == "right" %}
+                                        {% image block.value.image width-400 as blockimage %}
+                                    {% elif block.value.alignment == "half" %}
+                                        {% image block.value.image width-800 as blockimage %}
+                                    {% else %}
+                                        {% image block.value.image width-1280 as blockimage %}
+                                    {% endif %}
+
+                                    <div {% if block.value.attribution %}class="img-credit"{% endif %}>
+                                        <img src="{{ blockimage.url }}" width="{{ blockimage.width }}" height="{{ blockimage.height }}" alt="{{ blockimage.alt }}" />
+                                        {% if block.value.attribution %}<p class="credit">{{ block.value.attribution }}</p>{% endif %}
+                                    </div>
+                                    {% if block.value.caption %}
+                                        <p>{{ block.value.caption }}</p>
+                                    {% endif %}
+                                </div>
+                            </div>
+                        {% elif block.block_type == 'wide_image' %}
+                            <div class="">
+                                <div class="img-holder">
+                                    {% image block.value.image width-1280 as blockimage %}
+                                    <img src="{{ blockimage.url }}" width="{{ blockimage.width }}" height="{{ blockimage.height }}" alt="{{ blockimage.alt }}" />
+                                </div>
+                            </div>
+                        {% elif block.block_type == 'raw_html' %}
+                            {{ block.value|safe }}
+                        {% elif block.block_type == 'embed' %}
+                            <div>{{ block }}</div>
+                        {% else %}
+                            {{ block }}
+                        {% endif %}
+                    {% endfor %}
                 </div>
             </div>
         </div>
@@ -118,19 +164,4 @@
 </div>
 -->
 
-<div id="fb-root"></div>
-{% endblock %}
-
-{% block extra_js %}
-{% if FB_APP_ID %}
-    <script>(function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/en_GB/all.js#xfbml=1&appId={{ FB_APP_ID }}&status=0";
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script>
-{% endif %}
-
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 {% endblock %}
