--- a/khanatek/core/templates/core/includes/hero.html
+++ b/khanatek/core/templates/core/includes/hero.html
@@ -1,8 +1,8 @@
-{% load khanatek_tags wagtailcore_tags wagtailimages_tags %}
+{% load khanatek_tags wagtailcore_tags wagtailimages_tags static %}
 
 <!-- Complete css addition from style.css -->
 
-<section class="home-hero initial-load">
+<section class="home-hero initial-load view" id="home">
 
     <style>
     {% for heroItem in hero %}
@@ -23,10 +23,10 @@
     <!-- background images for features -->
 
     <div class="feature-images view hm-black-strong">
-        <div class="full-bg-img">
+        <div class="full-bg-img flex-center">
             {% for heroItem in hero %}
-                {% image heroItem.background max-1200x900 as imgbanner %}
-                <div class="feature-image" data-name="{% cycle '1' '2' '3' %}" style="background-image: url({{ imgbanner.url }})"></div>
+                {% image heroItem.background max-1800x978 as imgbanner %}
+                <div class="feature-image img-fluid" data-name="{% cycle '1' '2' '3' %}" style="background-image: url({{ imgbanner.url }}); -webkit-background-size: cover;"></div>
             {% endfor %}
         </div>
     </div>
