--- a/khanatek/core/templates/core/base.html
+++ b/khanatek/core/templates/core/base.html
@@ -24,16 +24,16 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="{% if self.seo_title %}{{ self.seo_title }}{% else %}{{ self.title }}{% endif %} | khanatek">
     <meta name="twitter:description" content="{% if self.intro %}{{ self.intro|striptags }}{% elif self.search_description %}{{ self.search_description }}{% endif %}">
-    <meta name="twitter:image:src" content="http://{{ request.site.hostname }}{% if self.feed_image %}{% image self.feed_image width-400 as img %}{{ img.url }}{% else %}{% static "khanatek/images/about-placeholder6.jpg" %}{% endif %}" />
+    <meta name="twitter:image:src" content="http://{{ request.site.hostname }}{% if self.feed_image %}{% image self.feed_image width-400 as img %}{{ img.url }}{% else %}{% static 'khanatek/images/about-placeholder6.jpg' %}{% endif %}" />
 
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://{{ request.site.hostname }}{{ self.url }}" />
     <meta property="og:title" content="{% if self.seo_title %}{{ self.seo_title }}{% else %}{{ self.title }}{% endif %} | khanatek" />
-    <meta property="og:image" content="http://{{ request.site.hostname }}{% if self.feed_image %}{% image self.feed_image width-1024 as img %}{{ img.url }}{% else %}{% static "khanatek/images/about-placeholder6.jpg" %}{% endif %}" />
+    <meta property="og:image" content="http://{{ request.site.hostname }}{% if self.feed_image %}{% image self.feed_image width-1024 as img %}{{ img.url }}{% else %}{% static 'khanatek/images/about-placeholder6.jpg' %}{% endif %}" />
     <meta property="og:description" content="{% if self.search_description %}{{ self.search_description }}{% endif %}" />
     <meta property="og:site_name" content="khanatek" />
 
-    <link rel="shortcut icon" href="{% static "khanatek/images/favicon.ico" %}" />
+    <link rel="shortcut icon" href="{% static 'khanatek/images/favicon.ico' %}" />
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
@@ -46,7 +46,7 @@
     <link rel="stylesheet" href="{% static 'css/mdb.min.css' %}">
 
     <!-- Khanatek Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}"> -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/khanatek.css' %}">
     <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/new.css' %}"> -->
 
@@ -67,8 +67,8 @@
 
         {% wagtailuserbar %}
         <!--Navigation & Intro-->
-    <header class="header">
         <!--Navbar-->
+    <header>
     <nav class="navbar navbar-toggleable-md fixed-top navbar-dark bg-faded scrolling-navbar">
         <div class="container">
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav2" aria-controls="navbarNav2" aria-expanded="false" aria-label="Toggle navigation">
@@ -80,7 +80,7 @@
                 
             </a>
             <div class="collapse navbar-collapse" id="navbarNav2">
-                <ul class="navbar-nav mr-auto bleed out-animation">
+                <ul class="navbar-nav mr-auto bleed">
                     {% main_menu as menu %}
                     {% for block in menu.menu %}
                         {% include_block block %}
@@ -89,8 +89,8 @@
             </div>
         </div>
     </nav>
+    </header>
         <!--/.Navbar-->
-    <header>
 
     <main>{% spaceless %}{% block content %}{% endblock %}{% endspaceless %}</main>
 
@@ -103,29 +103,29 @@
 
                 <!--First column-->
                 <div class="col-md-3 offset-md-1">
-                {% include "core/includes/contact_info_block.html" %}
+                <!-- {% include "core/includes/contact_info_block.html" %} -->
                 </div>
                 <!--/.First column-->
 
                 <hr class="hidden-md-up">
 
                 <!--Second column-->
-                <div class="col-md-2 offset-md-1">
-                    <ul>
+                <div class="col-md-5 offset-md-1">
+                    <!-- <ul>
                         <li><a class="nav-link waves-effect waves-light active" href="{{ value.page.url }}"{% if value.page.url in request.path %}{% endif %}>{{ value.page.title }}</a>{% for block in menu.menu %}
                         {% include_block block %}
-                    {% endfor %}</li>
-                        <li><a href="/privacy-policy/">Privacy/terms or use</a></li>
-                    </ul>
+                    {% endfor %}</li> -->
+                        <div><a href="/privacy-policy/">Privacy/terms or use</a></div>
+                    <!-- </ul> -->
                 </div>
                 <!--/.Second column-->
 
                 <hr class="hidden-md-up">
 
                 <!--Third column-->
-                <div class="col-md-5">
+<!--                 <div class="col-md-5">
                     {% include "core/contact.html" %}
-                </div>
+                </div> -->
                 <!--/.Third column-->
 
             </div>
