--- a/khanatek/core/templates/core/tags/homepage_job_listing.html
+++ b/khanatek/core/templates/core/tags/homepage_job_listing.html
@@ -1,13 +1,16 @@
 {% load wagtailcore_tags wagtailimages_tags %}
 
 {% if jobs %}
-<h2 style="display:block;">{{ jobintro }}</h2>
+<h2 class="section-heading wow fadeInDown" style="display:block;">{{ jobintro }}</h2>
 
-<ul>
 {% for job in jobs %}
 <div class="row text-center">
     <!--First column-->
-        <div class="col-lg-4 col-md-6 mb-r wow fadeInUp">
+        <div class="col-md-4 mb-r wow fadeInUp">
+
+            <div class="hm-zoom">
+                <img src="https://mdbootstrap.com/img/Photos/Horizontal/Work/4-col/img%20(33).jpg" class="img-fluid" alt="">
+             </div>
         <!--Featured image-->
             <a href="{{ job.url }}" class="listing">
                 <div class="view overlay hm-white-slight z-depth-2">
@@ -18,15 +21,13 @@
             </a>
             <!--Excerpt-->
             <div class="card-block">
-                <h5 class="red-text"><i class="fa fa-hat"></i>Careers</h5>
                 <h3>{{ job.job_title }}</h3>
                 <p>{{ job.job_intro }}</p>
-                    <a class="btn btn-ins" href="{{ job.url }}"><i class="fa fa-clone left"></i> View opening</a>
+                    <a class="btn btn-outline-primary waves-effect" href="{{ job.url }}"><i class="fa fa-clone left"></i> View opening</a>
             </div>
         </div>
 </div>
 {% endfor %}
-</ul>
     {% if jobindex.no_jobs_that_fit %}
     <div class="jobs-followon">
         {{ jobindex.no_jobs_that_fit|richtext }}
