--- a/khanatek/core/templates/core/includes/article_listing.html
+++ b/khanatek/core/templates/core/includes/article_listing.html
@@ -9,18 +9,21 @@
 {% endfor %}
 </div>
 
-<div class="container pagination">
-    {# Pagination #}
-    {# Append any other url query string variables to the next and previous links - allows tag to be passed through #}
-    <div class="previous">
-        {% if article_posts.has_previous %}
-            <a href="?page={{ article_posts.previous_page_number }}{% for key,value in request.GET.items %}{% ifnotequal key 'page' %}&amp;{{ key }}={{ value }}{% endifnotequal %}{% endfor %}"><p> Previous &nbsp;</p></a>
-        {% endif %}
-    </div>
 
-    <div class="next">
-        {% if article_posts.has_next %}
-            <a href="?page={{ article_posts.next_page_number }}{% for key,value in request.GET.items %}{% ifnotequal key 'page' %}&amp;{{ key }}={{ value }}{% endifnotequal %}{% endfor %}"><p> Next </p></a>
-        {% endif %}
+<nav>
+    <ul class="pagination pg-blue">
+        {# Pagination #}
+        {# Append any other url query string variables to the next and previous links - allows tag to be passed through #}
+        <li class="page-item">
+            {% if article_posts.has_previous %}
+                <a href="?page={{ article_posts.previous_page_number }}{% for key,value in request.GET.items %}{% ifnotequal key 'page' %}&amp;{{ key }}={{ value }}{% endifnotequal %}{% endfor %}" class="page-link"><p> Previous &nbsp;</p></a>
+            {% endif %}
+        </li>
+
+        <li class="page-item">
+            {% if article_posts.has_next %}
+                <a href="?page={{ article_posts.next_page_number }}{% for key,value in request.GET.items %}{% ifnotequal key 'page' %}&amp;{{ key }}={{ value }}{% endifnotequal %}{% endfor %}" class="page-link"><p> Next </p></a>
+            {% endif %}
+        </div>
     </div>
-</div>
+</nav>
